# CSVComparator

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: CMakeLists.txt  csv_comparator.cpp  csv_comparator.h  csv_parser.cpp  csv_parser.h  file_comparator.cpp  file_comparator.h  file_type.cpp  file_type.h  main.cpp  row.cpp  row.h  threaded_comparator.cpp  threaded_comparator.h
tests/: CMakeLists.txt  csv_comparator_test.cpp  file_comparator_test.cpp
